--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -376,7 +376,7 @@
                                   aria-haspopup="true"
                                   aria-busy="false"
                                 >
-                                  <div class="profile-reviews__logo-xl-list">
+                                  <div class="profile-reviews__logo-xl-list" id="help-btn">
                                     <div class="profile-reviews__logo-xl-text">
                                       Help
                                       <svg
@@ -804,6 +804,294 @@
       </div>
     </div>
 
+    <!-- help modal -->
+
+    <div dir="ltr" id="help-modal" class="hidden">
+      <div class="_xejed6" aria-label="Recommended help" role="region" tabindex="-1">
+       <div>
+        <section>
+         <div class="_1dasptx">
+          <div class="_jro6t0">
+           <div class="_t0tx82">
+            <h1 tabindex="-1" class="_14i3z6h"><div class="_1lmb2fq">Recommended help</div></h1>
+           </div>
+           <div class="_3mnosr">
+            <button type="button" class="_98kere2" aria-busy="false" style="padding: 0px; margin: 0px;" id="close-help-modal">
+             <svg viewBox="0 0 24 24" role="img" aria-label="Close" focusable="false" style="height: 16px; width: 16px; display: block; fill: currentcolor;">
+              <path
+               d="m23.25 24c-.19 0-.38-.07-.53-.22l-10.72-10.72-10.72 10.72c-.29.29-.77.29-1.06 0s-.29-.77 0-1.06l10.72-10.72-10.72-10.72c-.29-.29-.29-.77 0-1.06s.77-.29 1.06 0l10.72 10.72 10.72-10.72c.29-.29.77-.29 1.06 0s .29.77 0 1.06l-10.72 10.72 10.72 10.72c.29.29.29.77 0 1.06-.15.15-.34.22-.53.22"
+               fill-rule="evenodd"
+              ></path>
+             </svg>
+            </button>
+           </div>
+          </div>
+         </div>
+         <div class="_eflz7d" style="height: calc(100% - 162px);">
+          <div tabindex="-1">
+           <section>
+            <div class="_1xtznt6">
+             <div class="_9hxttoo">
+              <div style="margin-bottom: 8px;">
+               <label class="_rin72m" for="help-field-guide-search-input">
+                <div class="_121z06r2">
+                 <h2 tabindex="-1" class="_14i3z6h"><div class="_7cmsd4">Search by keyword</div></h2>
+                </div>
+               </label>
+              </div>
+              <div dir="ltr">
+               <div class="_ckio8me">
+                <div class="_ncmdki">
+                 <div class="_e5ldu0s" style="visibility: visible; height: 34px;">
+                  <div class="_nncr1bm">
+                   <div class="_ni9axhe">
+                    <div class="_1iti0ju">
+                     <svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height: 16px; width: 16px; display: block; fill: rgb(118, 118, 118);">
+                      <path
+                       d="m10.7227 19.9083c-4.919-.706-8.336-5.266-7.63-10.185.704-4.919 5.264-8.336 10.184-7.631 4.919.706 8.336 5.265 7.632 10.185-.706 4.92-5.266 8.336-10.186 7.631m11.65 2.76-3.729-4.196c1.706-1.514 2.905-3.618 3.254-6.053.783-5.467-3.013-10.533-8.479-11.317-5.467-.784-10.534 3.013-11.316 8.48-.784 5.466 3.012 10.532 8.478 11.315 2.675.384 5.254-.329 7.283-1.798l3.762 4.233c.184.207.5.225.706.042.206-.184.225-.5.041-.706"
+                      ></path>
+                     </svg>
+                    </div>
+                   </div>
+                  </div>
+                 </div>
+                </div>
+                <div class="_178faes"><input class="_qa9xwau" id="help-field-guide-search-input" name="search-input" placeholder="Ex: reservation status" type="text" value="" /></div>
+               </div>
+              </div>
+             </div>
+            </div>
+           </section>
+          </div>
+          <div style="margin-bottom: 24px;">
+           <section>
+            <div style="margin-top: 16px; margin-bottom: 16px;">
+             <h2 tabindex="-1" class="_14i3z6h">
+              <span class="_1xxanas2"><div class="_4efw5a">Recommended articles</div></span>
+             </h2>
+            </div>
+            <div style="margin-bottom: 8px;">
+             <button type="button" class="_n18e3a">
+              <div class="_1wobxsm">
+               <div class="_18ilrswp">Extenuating Circumstances Policy and the coronavirus (COVID-19)</div>
+               <div class="_1kpuxvlh" title="On March 11, 2020, the World Health Organization (WHO) declared the outbreak of coronavirus, known as COVID-19, to be a global pandemic. Sin…">
+                On March 11, 2020, the World Health Organization (WHO) declared the outbreak of coronavirus, known as COVID-19, to be a global pandemic. Sin…
+               </div>
+               <div style="margin-top: 4px;">
+                <span class="_185kh56">
+                 <div class="_jro6t0">
+                  <div class="_rqfxvmb"><div>Read more</div></div>
+                  <div class="_rqfxvmb">
+                   <div style="margin-left: 8px;">
+                    <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; fill: currentcolor;">
+                     <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                    </svg>
+                   </div>
+                  </div>
+                 </div>
+                </span>
+               </div>
+              </div>
+             </button>
+            </div>
+            <div style="margin-bottom: 8px;">
+             <button type="button" class="_n18e3a">
+              <div class="_1wobxsm">
+               <div class="_18ilrswp">What happens when your ID is checked</div>
+               <div class="_1kpuxvlh" title="Your security a top priority. We want you to be confident that people on Airbnb are who they say they are. One way we do that is by checking…">
+                Your security a top priority. We want you to be confident that people on Airbnb are who they say they are. One way we do that is by checking…
+               </div>
+               <div style="margin-top: 4px;">
+                <span class="_185kh56">
+                 <div class="_jro6t0">
+                  <div class="_rqfxvmb"><div>Read more</div></div>
+                  <div class="_rqfxvmb">
+                   <div style="margin-left: 8px;">
+                    <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; fill: currentcolor;">
+                     <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                    </svg>
+                   </div>
+                  </div>
+                 </div>
+                </span>
+               </div>
+              </div>
+             </button>
+            </div>
+            <div style="margin-bottom: 8px;">
+             <button type="button" class="_n18e3a">
+              <div class="_1wobxsm">
+               <div class="_18ilrswp">Change or reset your password</div>
+               <div class="_1kpuxvlh" title="Forget your password or having trouble logging in? We’ve been there. Time for a reset.">Forget your password or having trouble logging in? We’ve been there. Time for a reset.</div>
+               <div style="margin-top: 4px;">
+                <span class="_185kh56">
+                 <div class="_jro6t0">
+                  <div class="_rqfxvmb"><div>Read more</div></div>
+                  <div class="_rqfxvmb">
+                   <div style="margin-left: 8px;">
+                    <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; fill: currentcolor;">
+                     <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                    </svg>
+                   </div>
+                  </div>
+                 </div>
+                </span>
+               </div>
+              </div>
+             </button>
+            </div>
+            <div style="margin-bottom: 8px;">
+             <button type="button" class="_n18e3a">
+              <div class="_1wobxsm">
+               <div class="_18ilrswp">Editing, removing, or adding a payment method</div>
+               <div class="_1kpuxvlh" title="If an existing payment method on your account is incorrect (ex: an expired credit card), you can update it or add a new payment method.">
+                If an existing payment method on your account is incorrect (ex: an expired credit card), you can update it or add a new payment method.
+               </div>
+               <div style="margin-top: 4px;">
+                <span class="_185kh56">
+                 <div class="_jro6t0">
+                  <div class="_rqfxvmb"><div>Read more</div></div>
+                  <div class="_rqfxvmb">
+                   <div style="margin-left: 8px;">
+                    <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; fill: currentcolor;">
+                     <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                    </svg>
+                   </div>
+                  </div>
+                 </div>
+                </span>
+               </div>
+              </div>
+             </button>
+            </div>
+           </section>
+          </div>
+          <div style="margin-bottom: 48px;">
+           <section>
+            <div style="margin-top: 16px; margin-bottom: 16px;">
+             <h2 tabindex="-1" class="_14i3z6h">
+              <span class="_1xxanas2"><div class="_4efw5a">Explore more articles by topic</div></span>
+             </h2>
+            </div>
+            <div style="margin-top: 24px; margin-bottom: 24px;">
+             <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
+              <div class="_hgs47m">
+               <div class="_10ejfg4u"><div class="_18ilrswp">Changes &amp; cancellations</div></div>
+               <div class="_ni9axhe">
+                <div class="_z7e3cb" style="transform: rotate(0deg);">
+                 <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
+                  <path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path>
+                 </svg>
+                </div>
+               </div>
+              </div>
+             </button>
+            </div>
+            <div style="margin-top: 0px; margin-bottom: 0px;"><div class="_7qp4lh"></div></div>
+            <div style="margin-top: 24px; margin-bottom: 24px;">
+             <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
+              <div class="_hgs47m">
+               <div class="_10ejfg4u"><div class="_18ilrswp">Resolve a problem</div></div>
+               <div class="_ni9axhe">
+                <div class="_z7e3cb" style="transform: rotate(0deg);">
+                 <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
+                  <path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path>
+                 </svg>
+                </div>
+               </div>
+              </div>
+             </button>
+            </div>
+            <div style="margin-top: 0px; margin-bottom: 0px;"><div class="_7qp4lh"></div></div>
+            <div style="margin-top: 24px; margin-bottom: 24px;">
+             <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
+              <div class="_hgs47m">
+               <div class="_10ejfg4u"><div class="_18ilrswp">Prices &amp; fees</div></div>
+               <div class="_ni9axhe">
+                <div class="_z7e3cb" style="transform: rotate(0deg);">
+                 <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 11px; width: 11px; display: block; fill: rgb(118, 118, 118);">
+                  <path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd"></path>
+                 </svg>
+                </div>
+               </div>
+              </div>
+             </button>
+            </div>
+           </section>
+          </div>
+          <div style="margin-bottom: 24px;">
+           <section>
+            <div style="margin-top: 16px; margin-bottom: 16px;">
+             <h2 tabindex="-1" class="_14i3z6h">
+              <span class="_1xxanas2"><div class="_4efw5a">Other things you can do</div></span>
+             </h2>
+            </div>
+            <div style="margin-top: 8px; margin-bottom: 8px;">
+             <div class="_czm8crp">
+              <a href="/forgot_password" target="_blank" class="_12jvhwr" aria-busy="false">
+               <div class="_jro6t0">
+                <div class="_rqfxvmb"><div>Reset password</div></div>
+                <div class="_rqfxvmb">
+                 <div style="margin-left: 8px;">
+                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; display: block; fill: currentcolor;">
+                   <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                  </svg>
+                 </div>
+                </div>
+               </div>
+              </a>
+             </div>
+            </div>
+            <div style="margin-top: 8px; margin-bottom: 8px;">
+             <div class="_czm8crp">
+              <a href="/users/payment_methods" target="_blank" class="_12jvhwr" aria-busy="false">
+               <div class="_jro6t0">
+                <div class="_rqfxvmb"><div>Edit your payment methods</div></div>
+                <div class="_rqfxvmb">
+                 <div style="margin-left: 8px;">
+                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; display: block; fill: currentcolor;">
+                   <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                  </svg>
+                 </div>
+                </div>
+               </div>
+              </a>
+             </div>
+            </div>
+            <div style="margin-top: 8px; margin-bottom: 8px;">
+             <div class="_czm8crp">
+              <a href="/verify" target="_blank" class="_12jvhwr" aria-busy="false">
+               <div class="_jro6t0">
+                <div class="_rqfxvmb"><div>Add your ID</div></div>
+                <div class="_rqfxvmb">
+                 <div style="margin-left: 8px;">
+                  <svg viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; display: block; fill: currentcolor;">
+                   <path d="m4.29 1.71a1 1 0 1 1 1.42-1.41l8 8a1 1 0 0 1 0 1.41l-8 8a1 1 0 1 1 -1.42-1.41l7.29-7.29z" fill-rule="evenodd"></path>
+                  </svg>
+                 </div>
+                </div>
+               </div>
+              </a>
+             </div>
+            </div>
+           </section>
+          </div>
+         </div>
+         <div class="_dhkcqx">
+          <div style="margin-bottom: 16px;">
+           <a href="/help" class="_6niksfg" aria-busy="false"><span class="_ftj2sg4">Visit the Help Center</span></a>
+          </div>
+          <div class="_1jlnvra2">
+           <div class="_76g5l9"><a href="/help/feedback" class="_12jvhwr" aria-busy="false">Give feedback</a></div>
+          </div>
+         </div>
+        </section>
+       </div>
+      </div>
+     </div>
+     
+
     <script src="../assets/js/pages/profile-reviews.js" defer></script>
+    <script src="../assets/js/pages/help.js" defer></script>
   </body>
 </html>
